feat: bring journal work to today
